# serializer version: 1
# name: test_platform_setup_and_discovery[sensor.katzenklappe_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.katzenklappe_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1299453-battery_level',
    'unit_of_measurement': '%',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.katzenklappe_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Katzenklappe Battery',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.katzenklappe_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '87',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.katzenklappe_entity_information-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.katzenklappe_entity_information',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:information',
    'original_name': 'Entity Information',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'entity_information',
    'unique_id': '1299453-entity_information',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[sensor.katzenklappe_entity_information-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Katzenklappe Entity Information',
      'household_id': 287000,
      'icon': 'mdi:information',
      'id': 1299453,
      'parent_device_id': 1202413,
      'product_id': 6,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.katzenklappe_entity_information',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Katzenklappe',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.laundry_door_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.laundry_door_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '727608-battery_level',
    'unit_of_measurement': '%',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.laundry_door_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Laundry Door Battery',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.laundry_door_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '74',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.laundry_door_entity_information-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.laundry_door_entity_information',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:information',
    'original_name': 'Entity Information',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'entity_information',
    'unique_id': '727608-entity_information',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[sensor.laundry_door_entity_information-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Laundry Door Entity Information',
      'household_id': 7777,
      'icon': 'mdi:information',
      'id': 727608,
      'parent_device_id': None,
      'product_id': 3,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.laundry_door_entity_information',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Laundry Door',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_assigned_devices-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_assigned_devices',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Assigned devices',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'devices',
    'unique_id': '472721-devices',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_assigned_devices-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui Assigned devices',
      'status_devices_0_created_at': datetime.datetime(2025, 9, 17, 17, 12, 47, tzinfo=TzInfo(UTC)),
      'status_devices_0_device_id': None,
      'status_devices_0_id': 269654,
      'status_devices_0_index': 2,
      'status_devices_0_profile': 2,
      'status_devices_0_updated_at': datetime.datetime(2025, 9, 17, 17, 12, 47, tzinfo=TzInfo(UTC)),
      'status_devices_0_version': 1,
      'status_devices_1_created_at': datetime.datetime(2025, 7, 13, 11, 14, 42, tzinfo=TzInfo(UTC)),
      'status_devices_1_device_id': None,
      'status_devices_1_id': 271836,
      'status_devices_1_index': 2,
      'status_devices_1_profile': 2,
      'status_devices_1_updated_at': datetime.datetime(2025, 7, 13, 11, 14, 42, tzinfo=TzInfo(UTC)),
      'status_devices_1_version': 1,
      'status_devices_2_created_at': datetime.datetime(2025, 4, 25, 19, 0, 40, tzinfo=TzInfo(UTC)),
      'status_devices_2_device_id': None,
      'status_devices_2_id': 1181149,
      'status_devices_2_index': 1,
      'status_devices_2_profile': 2,
      'status_devices_2_updated_at': datetime.datetime(2025, 4, 25, 19, 0, 40, tzinfo=TzInfo(UTC)),
      'status_devices_2_version': 1,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_assigned_devices',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_drinking-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_drinking',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WEIGHT: 'weight'>,
    'original_icon': None,
    'original_name': 'Drinking',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'drinking',
    'unique_id': '472721-drinking',
    'unit_of_measurement': <UnitOfMass.GRAMS: 'g'>,
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_drinking-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'at': datetime.datetime(2020, 3, 11, 14, 21, 7, tzinfo=TzInfo(UTC)),
      'device_class': 'weight',
      'device_id': 269654,
      'friendly_name': 'Maui Drinking',
      'id': 1210761432,
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'tag_id': 2039802,
      'unit_of_measurement': <UnitOfMass.GRAMS: 'g'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_drinking',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3.23',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_entity_information-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_entity_information',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:information',
    'original_name': 'Entity Information',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'entity_information',
    'unique_id': '472721-entity_information',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_entity_information-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'entity_picture': 'https://userimages.production.surehub.io/thm/3139194472/UCcarrDHzX0MkjEORQqCXNLKxsdweCQPJjl3OQ7s.jpg',
      'friendly_name': 'Maui Entity Information',
      'household_id': 222527,
      'icon': 'mdi:information',
      'id': 472721,
      'parent_device_id': None,
      'product_id': 0,
      'tag': 60978,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_entity_information',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Maui',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_feeding-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_feeding',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WEIGHT: 'weight'>,
    'original_icon': None,
    'original_name': 'Feeding',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'feeding',
    'unique_id': '472721-feeding',
    'unit_of_measurement': <UnitOfMass.GRAMS: 'g'>,
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_feeding-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'at': datetime.datetime(2020, 3, 11, 14, 21, 7, tzinfo=TzInfo(UTC)),
      'device_class': 'weight',
      'device_id': 269654,
      'friendly_name': 'Maui Feeding',
      'id': 1210761432,
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'tag_id': 2039802,
      'unit_of_measurement': <UnitOfMass.GRAMS: 'g'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_feeding',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3.23',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_last_activity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_last_activity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Last Activity',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'last_activity',
    'unique_id': '472721-last_activity',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_last_activity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui Last Activity',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_last_activity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_matlada_old_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_matlada_old_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '269654-battery_level',
    'unit_of_measurement': '%',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_matlada_old_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Maui matlåda (old)  Battery',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_matlada_old_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '13',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_matlada_old_bowl_one_weight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_matlada_old_bowl_one_weight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WEIGHT: 'weight'>,
    'original_icon': None,
    'original_name': 'Bowl One Weight',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bowl_weight',
    'unique_id': '269654-bowl_1_weight',
    'unit_of_measurement': <UnitOfMass.GRAMS: 'g'>,
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_matlada_old_bowl_one_weight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_weight': 32.16,
      'device_class': 'weight',
      'food_type': 'WET',
      'friendly_name': 'Maui matlåda (old)  Bowl One Weight',
      'last_fill_weight': 32.16,
      'last_filled_at': datetime.datetime(2025, 7, 7, 10, 29, 29, tzinfo=TzInfo(UTC)),
      'last_zeroed_at': datetime.datetime(2025, 5, 23, 10, 25, 29, tzinfo=TzInfo(UTC)),
      'position': 'LEFT',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'substance_type': 2,
      'unit_of_measurement': <UnitOfMass.GRAMS: 'g'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_matlada_old_bowl_one_weight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '32.16',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_matlada_old_entity_information-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_matlada_old_entity_information',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:information',
    'original_name': 'Entity Information',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'entity_information',
    'unique_id': '269654-entity_information',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_matlada_old_entity_information-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'entity_picture': 'https://www.surepetcare.io/assets/assets/products/feeder.7ff330c9e368df01d256156b6fc797bb.png',
      'friendly_name': 'Maui matlåda (old)  Entity Information',
      'household_id': 222527,
      'icon': 'mdi:information',
      'id': 269654,
      'parent_device_id': 295972,
      'product_id': 4,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_matlada_old_entity_information',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Maui matlåda (old) ',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_matlada_old_lid_delay-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.maui_matlada_old_lid_delay',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Lid Delay',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lid_delay',
    'unique_id': '269654-lid_delay',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_matlada_old_lid_delay-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Lid Delay',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_matlada_old_lid_delay',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'FASTER',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_matlada_old_rssi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_matlada_old_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RSSI',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rssi',
    'unique_id': '269654-rssi',
    'unit_of_measurement': 'dBm',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_matlada_old_rssi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  RSSI',
      'unit_of_measurement': 'dBm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_matlada_old_rssi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-81',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_matlada_old_tare-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.maui_matlada_old_tare',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Tare',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'tare',
    'unique_id': '269654-tare',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_matlada_old_tare-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Tare',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_matlada_old_tare',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_matlada_old_total_weight_limit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_matlada_old_total_weight_limit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total Weight Limit',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'weight_capacity',
    'unique_id': '269654-weight_capacity',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_matlada_old_total_weight_limit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'control_bowls_settings_0_food_type': 'WET',
      'control_bowls_settings_0_target': 50,
      'control_bowls_settings_1_food_type': 'WET',
      'control_bowls_settings_1_target': 0,
      'friendly_name': 'Maui matlåda (old)  Total Weight Limit',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_matlada_old_total_weight_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_matlada_old_training_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.maui_matlada_old_training_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Training Mode',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'training_mode',
    'unique_id': '269654-training_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_matlada_old_training_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Training Mode',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_matlada_old_training_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'DISABLED',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_matlada_old_weight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_matlada_old_weight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WEIGHT: 'weight'>,
    'original_icon': None,
    'original_name': 'Weight',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bowl_2_weight',
    'unique_id': '269654-bowl_2_weight',
    'unit_of_measurement': <UnitOfMass.GRAMS: 'g'>,
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_matlada_old_weight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_weight': -27.2,
      'device_class': 'weight',
      'food_type': 'WET',
      'friendly_name': 'Maui matlåda (old)  Weight',
      'last_fill_weight': -27.2,
      'last_filled_at': datetime.datetime(2025, 7, 7, 10, 29, 29, tzinfo=TzInfo(UTC)),
      'last_zeroed_at': datetime.datetime(2025, 5, 23, 10, 25, 29, tzinfo=TzInfo(UTC)),
      'position': 'RIGHT',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'substance_type': 2,
      'unit_of_measurement': <UnitOfMass.GRAMS: 'g'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_matlada_old_weight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-27.2',
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_position-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_position',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Position',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'position',
    'unique_id': '472721-position',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[sensor.maui_position-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_id': 269654,
      'friendly_name': 'Maui Position',
      'id': 5045077041,
      'since': datetime.datetime(2020, 3, 11, 14, 21, 7, tzinfo=TzInfo(UTC)),
      'tag_id': 1725049,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_position',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Inside',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.katzenklappe_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.katzenklappe_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1299453-battery_level',
    'unit_of_measurement': '%',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.katzenklappe_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Katzenklappe Battery',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.katzenklappe_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '87',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.katzenklappe_entity_information-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.katzenklappe_entity_information',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:information',
    'original_name': 'Entity Information',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'entity_information',
    'unique_id': '1299453-entity_information',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.katzenklappe_entity_information-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Katzenklappe Entity Information',
      'household_id': 287000,
      'icon': 'mdi:information',
      'id': 1299453,
      'parent_device_id': 1202413,
      'product_id': 6,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.katzenklappe_entity_information',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Katzenklappe',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.laundry_door_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.laundry_door_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '727608-battery_level',
    'unit_of_measurement': '%',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.laundry_door_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Laundry Door Battery',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.laundry_door_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '74',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.laundry_door_entity_information-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.laundry_door_entity_information',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:information',
    'original_name': 'Entity Information',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'entity_information',
    'unique_id': '727608-entity_information',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.laundry_door_entity_information-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Laundry Door Entity Information',
      'household_id': 7777,
      'icon': 'mdi:information',
      'id': 727608,
      'parent_device_id': None,
      'product_id': 3,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.laundry_door_entity_information',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Laundry Door',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_assigned_devices-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_assigned_devices',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Assigned devices',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'devices',
    'unique_id': '472721-devices',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_assigned_devices-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui Assigned devices',
      'status_devices_0_created_at': datetime.datetime(2025, 9, 17, 17, 12, 47, tzinfo=TzInfo(UTC)),
      'status_devices_0_device_id': None,
      'status_devices_0_id': 269654,
      'status_devices_0_index': 2,
      'status_devices_0_profile': 2,
      'status_devices_0_updated_at': datetime.datetime(2025, 9, 17, 17, 12, 47, tzinfo=TzInfo(UTC)),
      'status_devices_0_version': 1,
      'status_devices_1_created_at': datetime.datetime(2025, 7, 13, 11, 14, 42, tzinfo=TzInfo(UTC)),
      'status_devices_1_device_id': None,
      'status_devices_1_id': 271836,
      'status_devices_1_index': 2,
      'status_devices_1_profile': 2,
      'status_devices_1_updated_at': datetime.datetime(2025, 7, 13, 11, 14, 42, tzinfo=TzInfo(UTC)),
      'status_devices_1_version': 1,
      'status_devices_2_created_at': datetime.datetime(2025, 4, 25, 19, 0, 40, tzinfo=TzInfo(UTC)),
      'status_devices_2_device_id': None,
      'status_devices_2_id': 1181149,
      'status_devices_2_index': 1,
      'status_devices_2_profile': 2,
      'status_devices_2_updated_at': datetime.datetime(2025, 4, 25, 19, 0, 40, tzinfo=TzInfo(UTC)),
      'status_devices_2_version': 1,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_assigned_devices',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_drinking-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_drinking',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WEIGHT: 'weight'>,
    'original_icon': None,
    'original_name': 'Drinking',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'drinking',
    'unique_id': '472721-drinking',
    'unit_of_measurement': <UnitOfMass.GRAMS: 'g'>,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_drinking-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'at': datetime.datetime(2020, 3, 11, 14, 21, 7, tzinfo=TzInfo(UTC)),
      'device_class': 'weight',
      'device_id': 269654,
      'friendly_name': 'Maui Drinking',
      'id': 1210761432,
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'tag_id': 2039802,
      'unit_of_measurement': <UnitOfMass.GRAMS: 'g'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_drinking',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3.23',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_entity_information-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_entity_information',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:information',
    'original_name': 'Entity Information',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'entity_information',
    'unique_id': '472721-entity_information',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_entity_information-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'entity_picture': 'https://userimages.production.surehub.io/thm/3139194472/UCcarrDHzX0MkjEORQqCXNLKxsdweCQPJjl3OQ7s.jpg',
      'friendly_name': 'Maui Entity Information',
      'household_id': 222527,
      'icon': 'mdi:information',
      'id': 472721,
      'parent_device_id': None,
      'product_id': 0,
      'tag': 60978,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_entity_information',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Maui',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_feeding-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_feeding',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WEIGHT: 'weight'>,
    'original_icon': None,
    'original_name': 'Feeding',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'feeding',
    'unique_id': '472721-feeding',
    'unit_of_measurement': <UnitOfMass.GRAMS: 'g'>,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_feeding-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'at': datetime.datetime(2020, 3, 11, 14, 21, 7, tzinfo=TzInfo(UTC)),
      'device_class': 'weight',
      'device_id': 269654,
      'friendly_name': 'Maui Feeding',
      'id': 1210761432,
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'tag_id': 2039802,
      'unit_of_measurement': <UnitOfMass.GRAMS: 'g'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_feeding',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3.23',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_last_activity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_last_activity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Last Activity',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'last_activity',
    'unique_id': '472721-last_activity',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_last_activity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui Last Activity',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_last_activity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_matlada_old_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_matlada_old_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '269654-battery_level',
    'unit_of_measurement': '%',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_matlada_old_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Maui matlåda (old)  Battery',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_matlada_old_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '13',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_matlada_old_bowl_one_weight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_matlada_old_bowl_one_weight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WEIGHT: 'weight'>,
    'original_icon': None,
    'original_name': 'Bowl One Weight',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bowl_weight',
    'unique_id': '269654-bowl_1_weight',
    'unit_of_measurement': <UnitOfMass.GRAMS: 'g'>,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_matlada_old_bowl_one_weight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_weight': 32.16,
      'device_class': 'weight',
      'food_type': 'WET',
      'friendly_name': 'Maui matlåda (old)  Bowl One Weight',
      'last_fill_weight': 32.16,
      'last_filled_at': datetime.datetime(2025, 7, 7, 10, 29, 29, tzinfo=TzInfo(UTC)),
      'last_zeroed_at': datetime.datetime(2025, 5, 23, 10, 25, 29, tzinfo=TzInfo(UTC)),
      'position': 'LEFT',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'substance_type': 2,
      'unit_of_measurement': <UnitOfMass.GRAMS: 'g'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_matlada_old_bowl_one_weight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '32.16',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_matlada_old_entity_information-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_matlada_old_entity_information',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:information',
    'original_name': 'Entity Information',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'entity_information',
    'unique_id': '269654-entity_information',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_matlada_old_entity_information-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'entity_picture': 'https://www.surepetcare.io/assets/assets/products/feeder.7ff330c9e368df01d256156b6fc797bb.png',
      'friendly_name': 'Maui matlåda (old)  Entity Information',
      'household_id': 222527,
      'icon': 'mdi:information',
      'id': 269654,
      'parent_device_id': 295972,
      'product_id': 4,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_matlada_old_entity_information',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Maui matlåda (old) ',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_matlada_old_lid_delay-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.maui_matlada_old_lid_delay',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Lid Delay',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lid_delay',
    'unique_id': '269654-lid_delay',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_matlada_old_lid_delay-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Lid Delay',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_matlada_old_lid_delay',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'FASTER',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_matlada_old_rssi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_matlada_old_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RSSI',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rssi',
    'unique_id': '269654-rssi',
    'unit_of_measurement': 'dBm',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_matlada_old_rssi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  RSSI',
      'unit_of_measurement': 'dBm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_matlada_old_rssi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-81',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_matlada_old_tare-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.maui_matlada_old_tare',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Tare',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'tare',
    'unique_id': '269654-tare',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_matlada_old_tare-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Tare',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_matlada_old_tare',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_matlada_old_total_weight_limit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_matlada_old_total_weight_limit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total Weight Limit',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'weight_capacity',
    'unique_id': '269654-weight_capacity',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_matlada_old_total_weight_limit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'control_bowls_settings_0_food_type': 'WET',
      'control_bowls_settings_0_target': 50,
      'control_bowls_settings_1_food_type': 'WET',
      'control_bowls_settings_1_target': 0,
      'friendly_name': 'Maui matlåda (old)  Total Weight Limit',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_matlada_old_total_weight_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_matlada_old_training_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.maui_matlada_old_training_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Training Mode',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'training_mode',
    'unique_id': '269654-training_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_matlada_old_training_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Training Mode',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_matlada_old_training_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'DISABLED',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_matlada_old_weight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_matlada_old_weight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WEIGHT: 'weight'>,
    'original_icon': None,
    'original_name': 'Weight',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bowl_2_weight',
    'unique_id': '269654-bowl_2_weight',
    'unit_of_measurement': <UnitOfMass.GRAMS: 'g'>,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_matlada_old_weight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_weight': -27.2,
      'device_class': 'weight',
      'food_type': 'WET',
      'friendly_name': 'Maui matlåda (old)  Weight',
      'last_fill_weight': -27.2,
      'last_filled_at': datetime.datetime(2025, 7, 7, 10, 29, 29, tzinfo=TzInfo(UTC)),
      'last_zeroed_at': datetime.datetime(2025, 5, 23, 10, 25, 29, tzinfo=TzInfo(UTC)),
      'position': 'RIGHT',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'substance_type': 2,
      'unit_of_measurement': <UnitOfMass.GRAMS: 'g'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_matlada_old_weight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-27.2',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_position-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.maui_position',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Position',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'position',
    'unique_id': '472721-position',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[sensor.maui_position-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_id': 269654,
      'friendly_name': 'Maui Position',
      'id': 5045077041,
      'since': datetime.datetime(2020, 3, 11, 14, 21, 7, tzinfo=TzInfo(UTC)),
      'tag_id': 1725049,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.maui_position',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Inside',
  })
# ---
